fixes: loader, ibangle

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     </section>
 
     <!--carousel slider-->
-    <section id="carousel-section" class="min-h-screen h-auto flex flex-col">
+    <section id="carousel-section" class="min-h-0 sm:min-h-screen h-auto flex flex-col">
         <div class="h-[100dvh] sm:h-[60dvh] md:h-[50dvh] lg:h-[60dvh] relative overflow-hidden bg-[#ffd527]">
 
             <div class="swiper mySwiper h-full">
@@ -862,14 +862,14 @@
         class="hidden fixed inset-0 bg-black bg-opacity-65 flex items-center justify-center px-4 pb-16 z-[900]">
 
         <div
-            class="relative bg-white rounded-lg w-[92%] max-h-[85vh] px-2 overflow-y-auto shadow-xl mt-16 no-scrollbar">
+            class="relative bg-black rounded-lg w-[92%] max-h-[85vh] px-2 overflow-y-auto shadow-xl mt-16 no-scrollbar">
 
             <div class="p-6">
                 <div class="flex justify-between items-start">
-                    <h2 class="text-2xl font-bold" id="details-pop-header-ibangle"></h2>
+                    <h2 class="text-2xl font-bold text-white" id="details-pop-header-ibangle"></h2>
                 </div>
 
-                <p class="text-gray-600 mt-2 " id="details-pop-desc-ibangle">
+                <p class="text-white font-thin mt-2 " id="details-pop-desc-ibangle">
 
                 </p>
             </div>
