--- a/movie-poster.html
+++ b/movie-poster.html
@@ -34,6 +34,10 @@
             color: #22c55e;
         }
 
+        .loader-text {
+            color: #ea4294;
+            font-family: 'Lato', sans-serif;
+        }
 
         /* Hide scrollbar but keep scrolling functionality */
         .no-scrollbar::-webkit-scrollbar {
@@ -492,8 +496,9 @@
 
     <!-- loader -->
     <div id="loader"
-        class="fixed inset-0 bg-white flex items-center justify-center z-[9999999] transition-opacity duration-1000 opacity-100">
+        class="fixed inset-0 bg-white flex flex-col items-center justify-center z-[9999999] transition-opacity duration-1000 opacity-100">
         <img id="logo-img" src="/MIW_Website_Assets/loader_horse.gif" alt="loader" class="w-20 h-20 object-contain">
+        <span id="loading-text" class="loader-text text-sm font-bold mt-4 ml-3">0%</span>
     </div>
     <!--loader end  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -502,13 +507,48 @@
     <script src="https://unpkg.com/imagesloaded@5/imagesloaded.pkgd.min.js"></script>
 
     <script>
-        let locoScrollInstance;
+        // Loading
+        document.addEventListener("DOMContentLoaded", () => {
+            const loader = document.getElementById("loader");
+            const loadingText = document.getElementById("loading-text");
 
-        document.addEventListener("readystatechange", () => {
-            if (document.readyState === "complete") {
-                document.getElementById("loader").classList.add("hidden");
+            const assets = document.images;
+            const totalAssets = assets.length;
+            let loadedCount = 0;
+
+            if (totalAssets === 0) {
+                finishLoading();
+            }
+            for (let i = 0; i < totalAssets; i++) {
+                const img = assets[i];
+
+                if (img.complete) {
+                    incrementLoaded();
+                } else {
+                    img.addEventListener('load', incrementLoaded);
+                    img.addEventListener('error', incrementLoaded);
+                }
+            }
+
+            function incrementLoaded() {
+                loadedCount++;
+                const percent = Math.round((loadedCount / totalAssets) * 100);
+                loadingText.textContent = `${percent}%`;
+
+                if (loadedCount === totalAssets) {
+                    finishLoading();
+                }
+            }
+
+            function finishLoading() {
+                loader.classList.add("opacity-0");
+                setTimeout(() => loader.classList.add("hidden"), 1000); // matches transition duration
             }
         });
+
+        let locoScrollInstance;
+
+
         document.getElementById("shareButton").addEventListener("click", async () => {
             if (navigator.share) {
                 await navigator.share({
