--- a/service.html
+++ b/service.html
@@ -54,6 +54,11 @@
 			transform: translateZ(0);
 		}
 
+		.loader-text {
+			color: #ea4294;
+			font-family: 'Lato', sans-serif;
+		}
+
 		.green {
 			color: #22c55e;
 		}
