--- a/work.html
+++ b/work.html
@@ -37,6 +37,10 @@
             color: #22c55e;
         }
 
+        .loader-text {
+            color: #ea4294;
+            font-family: 'Lato', sans-serif;
+        }
 
         /* Hide scrollbar but keep scrolling functionality */
         .no-scrollbar::-webkit-scrollbar {
