--- a/contactus.html
+++ b/contactus.html
@@ -23,8 +23,6 @@
         .green {
             color: #22c55e;
         }
-
-         
     </style>
 </head>
 
@@ -97,12 +95,11 @@
             </li>
         </ul>
     </div>
- 
     <!--contact design section-->
     <section id="tilt-section"
         class="w-full min-h-screen flex items-center justify-center bg-white py-10 sm:py-16 px-4 sm:px-6">
         <div
-            class="post-card mx-auto  border shadow-2xl bg-white relative flex flex-col md:flex-row overflow-hidden w-[70vw] md:w-[50vw] aspect-[1/1.5] h-[75dvh] md:h-[60dvh]">
+            class="post-card mx-auto  border shadow-2xl bg-white relative flex flex-col md:flex-row overflow-hidden w-[70vw] md:w-[50vw] aspect-[3/2] h-[75dvh] md:h-[60dvh]">
             <!-- Left Side (Reduced Image Size) -->
             <div class="w-full md:w-1/2 flex items-center justify-center px-4 md:px-6 pt-6 pb-4 md:py-20 xl:py-28 border-b-2 md:border-b-0 md:border-r-0 border-dotted border-gray-400"
                 style="border-image: repeating-linear-gradient(to right, #000 0, #000 1px, transparent 1px, transparent 7px) 100% 1;">
@@ -123,10 +120,10 @@
             <!-- Right Side (Form Section) -->
             <div class="w-full md:w-1/2 px-4 sm:px-6 pt-6 pb-10 flex flex-col justify-center relative">
                 <div class="flex items-center justify-between">
-                    <h1 class="text-xl  sm:text-2xl md:text-4xl font-light text-[#272cf7] leading-relaxed">
+                    <h1 class="text-xl  sm:text-2xl md:text-2xl lg:md:text-4xl font-light text-[#272cf7] leading-relaxed">
                         L E T S <br> T A L K
                     </h1>
-                    
+
                     <img src="/contactpage_assets/stamp.png" alt="Logo" class="w-16 sm:w-20 md:w-24 mt-4 sm:mt-10">
                 </div>
 
