movie poster page, footer links

--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
                 <div class="swiper-wrapper container">
 
                     <!-- Slide 1 -->
+
                     <div class="swiper-slide">
                         <div
                             class="container mx-auto px-4 h-full flex flex-col md:flex-row items-center justify-between relative">
@@ -497,6 +498,7 @@
                         </div>
                     </div>
 
+
                     <!-- Slide 2 -->
                     <div class="swiper-slide">
                         <div
@@ -520,7 +522,7 @@
                                 <div
                                     class="w-full md:w-1/2 flex justify-center md:justify-end items-end relative h-full">
                                     <img src="/MIW_Website_Assets/1.png"
-                                        class="w-full max-h-[60dvh] object-contain mx-auto absolute bottom-0 left-0 sm:left-10 sm:relative lg:pl-20"
+                                        class="w-full md:w-[120%] max-w-screen-xl h-auto object-cover mx-auto absolute bottom-0 left-0 sm:left-10 sm:relative lg:pl-20"
                                         alt="Atlee">
                                     <img src="/MIW_Website_Assets/doubleqoute_low_Yellow_testimonials.png"
                                         class="absolute bottom-10 right-0 sm:right-5 md:right-10 w-24 sm:w-16 md:w-20 hidden lg:block"
@@ -530,15 +532,16 @@
                         </div>
                     </div>
 
+                    <!-- Slide 3 -->
                     <div class="swiper-slide">
                         <div
                             class="container mx-auto px-4 h-full flex flex-col md:flex-row items-center justify-between relative">
                             <img src="/MIW_Website_Assets/doubleqoute_High_Blue_testimonials.png"
                                 class="absolute top-12 left-5 sm:left-[10vh] w-10 sm:w-16 md:w-24 hidden lg:block blue-quote"
                                 alt="Quote Top">
-                            <div
-                                class="container mx-auto px-4 h-full flex flex-col pt-8 sm:pt-0
-                           md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
+                           <div
+                                class="container mx-auto px-4 h-full flex flex-col  pt-8 sm:pt-0
+                         md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
                                 <div class="w-full md:w-1/2 text-center md:text-left space-y-4  mt-8 sm:mt-0">
                                     <h2 class="text-xl sm:text-2xl md:text-3xl font-bold text-black">Ipsum suspendisse
                                         ultrices gravida</h2>
@@ -546,14 +549,14 @@
                                         printing and typesetting industry. Lorem Ipsum has been the industry's standard
                                         dummy text ever since the 1500s, when an unknown printer took a galley of type
                                         and scrambled it to make a type specimen book.</p>
-                                    <p class="text-base sm:text-xl italic text-black">– Thiagarajan Kumararaja</p>
+                                    <p class="text-base sm:text-xl italic text-black">– Nirav shah</p>
 
                                 </div>
                                 <div
                                     class="w-full md:w-1/2 flex justify-center md:justify-end items-end relative h-full">
                                     <img src="/MIW_Website_Assets/2.png"
-                                        class="w-full max-h-[60dvh] object-contain mx-auto absolute bottom-0 left-0 sm:left-10 sm:relative lg:pl-20"
-                                        alt="thiagu">
+                                        class="w-full md:w-[120%] max-w-screen-xl h-auto object-cover mx-auto absolute bottom-0 left-0 sm:left-10 sm:relative lg:pl-20"
+                                        alt="nirav shah">
                                     <img src="/MIW_Website_Assets/doubleqoute_low_Yellow_testimonials.png"
                                         class="absolute bottom-10 right-0 sm:right-5 md:right-10 w-24 sm:w-16 md:w-20 hidden lg:block"
                                         alt="Quote Bottom">
@@ -561,16 +564,16 @@
                             </div>
                         </div>
                     </div>
-
+                    <!-- Slide 4 -->
                     <div class="swiper-slide">
                         <div
                             class="container mx-auto px-4 h-full flex flex-col md:flex-row items-center justify-between relative">
                             <img src="/MIW_Website_Assets/doubleqoute_High_Blue_testimonials.png"
                                 class="absolute top-12 left-5 sm:left-[10vh] w-10 sm:w-16 md:w-24 hidden lg:block blue-quote"
                                 alt="Quote Top">
-                            <div
-                                class="container mx-auto px-4 h-full flex flex-col pt-8 sm:pt-0
-                           md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
+                               <div
+                                class="container mx-auto px-4 h-full flex flex-col  pt-8 sm:pt-0
+                         md:flex-row lg:max-w-[1020px] md:max-w-[760px] items-center justify-end md:justify-between gap-6 sm:gap-8">
                                 <div class="w-full md:w-1/2 text-center md:text-left space-y-4  mt-8 sm:mt-0">
                                     <h2 class="text-xl sm:text-2xl md:text-3xl font-bold text-black">Ipsum suspendisse
                                         ultrices gravida</h2>
@@ -578,14 +581,14 @@
                                         printing and typesetting industry. Lorem Ipsum has been the industry's standard
                                         dummy text ever since the 1500s, when an unknown printer took a galley of type
                                         and scrambled it to make a type specimen book.</p>
-                                    <p class="text-base sm:text-xl italic text-black">– Nirav Shah</p>
+                                    <p class="text-base sm:text-xl italic text-black">–Thyagarajan kumar raja</p>
 
                                 </div>
                                 <div
                                     class="w-full md:w-1/2 flex justify-center md:justify-end items-end relative h-full">
                                     <img src="/MIW_Website_Assets/3.png"
-                                        class="w-full max-h-[60dvh] object-contain mx-auto absolute bottom-0 left-0 sm:left-10 sm:relative lg:pl-20"
-                                        alt="nirav">
+                                        class="w-full md:w-[110%] max-w-screen-xl h-auto object-cover mx-auto absolute bottom-0 left-0 sm:left-10 sm:relative lg:pl-20"
+                                        alt="thyagarajan kumar raja">
                                     <img src="/MIW_Website_Assets/doubleqoute_low_Yellow_testimonials.png"
                                         class="absolute bottom-10 right-0 sm:right-5 md:right-10 w-24 sm:w-16 md:w-20 hidden lg:block"
                                         alt="Quote Bottom">
@@ -593,7 +596,7 @@
                             </div>
                         </div>
                     </div>
-
+                    <!-- Slide 5 -->
                     <div class="swiper-slide">
                         <div
                             class="container mx-auto px-4 h-full flex flex-col md:flex-row items-center justify-between relative">
@@ -625,6 +628,7 @@
                             </div>
                         </div>
                     </div>
+
 
                     <!-- Add more slides the same way -->
 
@@ -703,41 +707,46 @@
                         <div class="w-full order-1 md:order-none">
                             <h3 class="font-semibold">HOME</h3>
                             <ul class="space-y-1">
-                                <li>Why us</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/aboutus.html'">Why us</li>
                             </ul>
                         </div>
                         <div class="w-full">
                             <h3 class="font-semibold">WORK</h3>
                             <ul class="space-y-1">
-                                <li>Film Posters</li>
-                                <li>Events</li>
-                                <li>Title Animations</li>
-                                <li>Branding</li>
-                                <li>Products</li>
-                                <li>Advertising</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/movie-poster.html'">Film
+                                    Posters</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/events.html'">Events</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/title-animations.html'">Title
+                                    Animations</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/branding.html'">Branding</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/products.html'">Products</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/advertising.html'">
+                                    Advertising</li>
                             </ul>
                         </div>
                         <div class="w-full">
                             <h3 class="font-semibold">SERVICE</h3>
-                            <ul class="space-y-1 text-sm pt-3">
-                                <li class="whitespace-nowrap">Branding</li>
-                                <li class="whitespace-nowrap">Advertising</li>
-                                <li class="whitespace-nowrap">Film Production</li>
-                                <li class="whitespace-nowrap">Graphic Design</li>
-                                <li class="whitespace-nowrap">Social Media Marketing</li>
-                                <li class="whitespace-nowrap">Integrated Marketing</li>
+                            <ul class="space-y-1">
+                                <li>Branding</li>
+                                <li>Advertising</li>
+                                <li>Film Production</li>
+                                <li>Graphic Design</li>
+                                <li>Social Media Marketing</li>
+                                <li>Integrated Marketing</li>
                             </ul>
                         </div>
                         <div class="w-full">
                             <h3 class="font-semibold">TEAM</h3>
                             <ul class="space-y-1">
-                                <li>Meet the Team</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/team.html'">Meet the Team
+                                </li>
                             </ul>
                         </div>
                         <div class="w-full">
                             <h3 class="font-semibold">CONTACT</h3>
                             <ul class="space-y-1">
-                                <li>Contact Information</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/contactus.html'">Contact
+                                    Information</li>
                                 <li>Careers</li>
                             </ul>
                         </div>
@@ -753,19 +762,20 @@
 
                         <!-- Social Icons -->
                         <div class="flex flex-wrap justify-center sm:justify-end gap-6">
-                            <a href="#"
+                            <a href="https://x.com/gopiprasannaa" target="_blank"
                                 class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                                 <i class="fa-brands fa-x-twitter"></i>
                             </a>
-                            <a href="#"
+                            <a href="https://www.facebook.com/p/Gopi-Prasannaa-Movie-Designs-100063507769046/"
+                                target="_blank"
                                 class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                                 <i class="fa-brands fa-facebook-f"></i>
                             </a>
-                            <a href="#"
+                            <a href="https://www.youtube.com/watch?v=t70PCpFsGA8" target="_blank"
                                 class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <a href="#"
+                            <a href="https://www.instagram.com/gopiprasannaa" target="_blank"
                                 class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                                 <i class="fa-brands fa-instagram"></i>
                             </a>
