--- a/team.html
+++ b/team.html
@@ -411,41 +411,46 @@
                         <div class="w-full order-1 md:order-none">
                             <h3 class="font-semibold">HOME</h3>
                             <ul class="space-y-1">
-                                <li>Why us</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/aboutus.html'">Why us</li>
                             </ul>
                         </div>
                         <div class="w-full">
                             <h3 class="font-semibold">WORK</h3>
                             <ul class="space-y-1">
-                                <li>Film Posters</li>
-                                <li>Events</li>
-                                <li>Title Animations</li>
-                                <li>Branding</li>
-                                <li>Products</li>
-                                <li>Advertising</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/movie-poster.html'">Film
+                                    Posters</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/events.html'">Events</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/title-animations.html'">Title
+                                    Animations</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/branding.html'">Branding</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/products.html'">Products</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/advertising.html'">
+                                    Advertising</li>
                             </ul>
                         </div>
                         <div class="w-full">
                             <h3 class="font-semibold">SERVICE</h3>
-                            <ul class="space-y-1 text-sm pt-3">
-                                <li class="whitespace-nowrap">Branding</li>
-                                <li class="whitespace-nowrap">Advertising</li>
-                                <li class="whitespace-nowrap">Film Production</li>
-                                <li class="whitespace-nowrap">Graphic Design</li>
-                                <li class="whitespace-nowrap">Social Media Marketing</li>
-                                <li class="whitespace-nowrap">Integrated Marketing</li>
+                            <ul class="space-y-1">
+                                <li>Branding</li>
+                                <li>Advertising</li>
+                                <li>Film Production</li>
+                                <li>Graphic Design</li>
+                                <li>Social Media Marketing</li>
+                                <li>Integrated Marketing</li>
                             </ul>
                         </div>
                         <div class="w-full">
                             <h3 class="font-semibold">TEAM</h3>
                             <ul class="space-y-1">
-                                <li>Meet the Team</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/team.html'">Meet the Team
+                                </li>
                             </ul>
                         </div>
                         <div class="w-full">
                             <h3 class="font-semibold">CONTACT</h3>
                             <ul class="space-y-1">
-                                <li>Contact Information</li>
+                                <li class="cursor-pointer" onclick="window.location.href='/contactus.html'">Contact
+                                    Information</li>
                                 <li>Careers</li>
                             </ul>
                         </div>
@@ -460,19 +465,20 @@
 
                         <!-- Social Icons -->
                         <div class="flex flex-wrap justify-center sm:justify-end gap-4">
-                            <a href="#"
+                            <a href="https://x.com/gopiprasannaa" target="_blank"
                                 class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                                 <i class="fa-brands fa-x-twitter"></i>
                             </a>
-                            <a href="#"
+                            <a href="https://www.facebook.com/p/Gopi-Prasannaa-Movie-Designs-100063507769046/"
+                                target="_blank"
                                 class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                                 <i class="fa-brands fa-facebook-f"></i>
                             </a>
-                            <a href="#"
+                            <a href="https://www.youtube.com/watch?v=t70PCpFsGA8" target="_blank"
                                 class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                                 <i class="fab fa-youtube"></i>
                             </a>
-                            <a href="#"
+                            <a href="https://www.instagram.com/gopiprasannaa" target="_blank"
                                 class="w-10 h-10 flex items-center justify-center border-2 border-white rounded-full text-white text-xl">
                                 <i class="fa-brands fa-instagram"></i>
                             </a>
